# AI_Hackathon_20260422

./: .gitignore  README.md  agent.md  architecture_constraints.md  current_status.md  decision_log.md  handoff_template.md  parallel_workstreams.md  project_context.md  pyproject.toml  task_board.md  validation_matrix.md
app/: cli.py  config.py  main.py
benchmarks/: redteam_mutations.json  safety_regression.json  safety_regression_v2.json
docs/: core_prompt.md  evo_lite_design.md  llm_provider_qwen.md  local_smoke_test_windows.md  phase_3_6_design.md
prompts/: README.md  codex_prompt_template.md
scripts/: guardedops_create_user.sh  guardedops_delete_user.sh  run_cli_windows.ps1  smoke_api_windows.ps1  start_web_windows.ps1
tests/: test_api_confirmation.py  test_api_readonly.py  test_cli.py  test_confirmation.py  test_confirmation_token.py  test_continuous_tasks.py  test_env_probe.py  test_evaluator.py  test_evidence_layer.py  test_evo_lite_hook.py  test_executors.py  test_experience_governance.py  test_experience_store.py  test_high_risk_refusal.py  test_llm_config.py  test_llm_parser_integration.py  test_llm_parser_stub.py  test_models.py  test_multistep_planner.py  test_operator_panel_core.py  test_operator_panel_preview.py  test_policy.py  test_qwen_provider.py  test_readonly_orchestrator.py  test_readonly_tools.py  test_recovery_engine.py  test_reflection.py  test_replayable_regression.py  test_safety_regression.py  test_session_memory.py  test_step_contracts.py  test_user_tools.py  test_validators.py  test_workflow_retrieval.py  test_workflow_templates.py
(+54 files in other folders)
