[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "guardedops"
version = "0.1.0"
description = "A safe conversational Linux/SSH operations agent skeleton."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "paramiko",
    "openai",
    "pytest",
]
